# CPfold

./: EM.m  README.md  RK.asv  RK.m  c2p.m  cPlot.m  createE.m  createPI.m  demo.mexw64  euDist.m  mEval.mexw64  mGrad.cpp  mGrad.mexw64  makeFile.m  morseEval.cpp  morseEval.m  morseEval.mexw64  morseGrad.asv  morseGrad.m  runBD.asv  runBD.m
c/: .gitignore  CMakeLists.txt  buildDebug.sh  defines.h
c/design/: CMakeLists.txt  design.cpp  design.h  designTPT.cpp  irreversibleDesign.cpp
c/exe/: CMakeLists.txt  chevronScatter.txt  combineDB.cpp  compare.cpp  compareDB.cpp  extractHydro.cpp  extractHydroMany.cpp  extractScatterData.m  findInteractions.cpp  findPaths.cpp  latticeMC.cpp  makeGraphviz.cpp  plotProb.m  plotScatter.m  purge.cpp  runBD.cpp  runEstimator.cpp  runEstimatorMC.cpp  runGA.cpp  runTPT.cpp  searchDB.cpp  testSampler.cpp  trapezoidScatter.txt  triangleScatter.txt  updateFreq.cpp  updateHyperstatic.cpp
c/genetic/: CMakeLists.txt  genetics.cpp  genetics.h  genetics_sampling.cpp
c/hydro/: CMakeLists.txt  hydro.cpp  hydro.h
c/input/: readme.txt
c/input/states/: N6DB.txt
c/lattice/: CMakeLists.txt  latticeP.cpp  latticeP.h
c/nauty/: CMakeLists.txt
c/non_eq_protocol/: CMakeLists.txt  protocol.cpp  protocol.h  protocol_vec.cpp
c/physics/: CMakeLists.txt  bDynamics.h  integrators.cpp  lennardJones.cpp  mcm.cpp  morse.cpp  sampling.cpp  sampling.h  stickyFn.cpp
c/support/: CMakeLists.txt  adjMat.cpp  adjacency.h  database.cpp  database.h  euDist.cpp  graph.cpp  graph.h  import.cpp  point.h
c/tpt/: tpt.cpp  tpt.h
c/visual/: graphviz.cpp  graphviz.h
matlab/optSA/: EM.m  allPerms.m  c2p.m  cPlot.m  createE.m  findRot.m  findUnique.m  mGrad.cpp  mGrad.mexa64  morseGrad.m  plotcluster2b.m  runBD.m  stickyF.m  testSame.m  vecRot.m
matlab/tpt2d/: N6DB.mat  distMat.m  estimateMFPT.m  estimateTP.m  mGrad.cpp  mGrad.mexa64  matToText.m  morseEval.m  plotTest.m  prettyPlot.m  stickyNewton.m
optSA/: EM.m  RK.m  cPlot.m  createPI.m  createPI2.m  getStates.m  mEval.cpp  mEval.mexa64  mGrad.mexw64  morseD.m  morseGrad.m  rmsd.m  runBD.asv  runBD.m
tpt2d/: EM.m  N7DB.mat  N7tptGraph.txt  RK.m  buildGraph2d.m  buildGraph2dSampler.asv  buildGraph2dSampler.m  c2p.m  cPlot.m  estimateMFPTsingle.m  mEval.cpp  mEval.mexa64  mEval.mexw64  mGrad.mexw64  makeGraphviz.m  morseGrad.m  runBD.m  runEstimator.m
tpt2d-c/: .gitignore  CMakeLists.txt  N7DB.txt  adjMat.cpp  bDynamics.h  buildOptimize.sh  database.h  euDist.cpp  integrators.cpp  out.txt  point.h  runBD  runBD.cpp  runEstimator.cpp  sampling.cpp
tpt2d-c/exe/: CMakeLists.txt  compare.cpp  findPaths.cpp  lump.cpp  makeGraph.cpp  runBD.cpp  runEstimator.cpp  runTPT.cpp
tpt2d-c/nauty/: CMakeLists.txt
tpt2d-c/physics/: CMakeLists.txt  adjMat.cpp  bDynamics.h  integrators.cpp  lennardJones.cpp  morse.cpp  sampling.cpp  stickyFn.cpp
tpt2d-c/support/: CMakeLists.txt  adjMat.cpp  database.cpp  database.h  graph.cpp  graph.h  import.cpp  pair.h  point.cpp  point.h
tpt2d-c/tpt/: CMakeLists.txt  tpt.cpp  tpt.h
tpt2d-c/visual/: CMakeLists.txt  graph.cpp  graph.h  graphviz.cpp  graphviz.h
