add_executable(purge purge.cpp)
add_executable(runBD runBD.cpp)
add_executable(runEstimator runEstimator.cpp)
add_executable(searchDB searchDB.cpp)
add_executable(runEstimatorMC runEstimatorMC.cpp)
add_executable(testSampler testSampler.cpp)
add_executable(lump lump.cpp)
add_executable(findPaths findPaths.cpp)
add_executable(runTPT runTPT.cpp)
add_executable(compare compare.cpp)
add_executable(compareDB compareDB.cpp)
add_executable(combineDB combineDB.cpp)
add_executable(updateFreq updateFreq.cpp)
add_executable(updateHyperstatic updateHyperstatic.cpp)
add_executable(extractHydro extractHydro.cpp)
add_executable(extractHydroMany extractHydroMany.cpp)
add_executable(hydroStats hydroStats.cpp)
add_executable(findInteractions findInteractions.cpp)
add_executable(latticeMC latticeMC.cpp)

target_link_libraries(purge support)
target_link_libraries(runBD physics support)
target_link_libraries(runEstimator physics support)
target_link_libraries(searchDB nauty support)
target_link_libraries(runEstimatorMC physics support)
target_link_libraries(testSampler physics support)
target_link_libraries(lump nauty support)
target_link_libraries(findPaths tpt visual support)
target_link_libraries(runTPT tpt nauty physics visual support)
target_link_libraries(compare nauty support)
target_link_libraries(compareDB nauty support)
target_link_libraries(combineDB nauty support)
target_link_libraries(updateFreq nauty support)
target_link_libraries(updateHyperstatic nauty physics support)
target_link_libraries(extractHydro hydro nauty physics support)
target_link_libraries(extractHydroMany hydro nauty physics support)
target_link_libraries(hydroStats hydro nauty physics support)
target_link_libraries(findInteractions design tpt visual)
target_link_libraries(latticeMC lattice)
